improved DocumentationUtils and can't figure out how to give parameter names their actual names